--- a/code BM.Rmd
+++ b/code BM.Rmd
@@ -23,7 +23,7 @@ date=seq(2000, 2017)
 ```{r}
 autre_pays=read.csv("WB_data2.csv")
 
-autre_pays=autre_pays%>% filter(Country.Name %in% c("France","Canada","Brasil","Mexico","Cuba","China","India","Russia","Korea, Rep.","South Africa","Nigeria","Algeria","Morocco","Australia","Japan","New Zealand","Turkey","Israel"))
+autre_pays=autre_pays%>% filter(Country.Name %in% c("France","Canada","Brasil","Mexico","Cuba","China","India","Russia","Korea, Rep.","South Africa","Nigeria","Algeria","Morocco","Australia","Japan","New Zealand","Turkey","Israel", "Italy", "Sweden", "Denmark", "Poland", "Belgium", "Netherlands","Switzerland" ))
 
 autre_pays <- autre_pays %>% select(-c(Pays_indic, `Country.Name`, `Indicator.Name`)) %>% pivot_longer(c(2:25), names_to = "year", values_to = "value") %>% pivot_wider(names_from = "Simple.Indicator", values_from = "value") 
 autre_pays$year=as.numeric(substr(autre_pays$year, 2, 6))
@@ -36,9 +36,14 @@ df_BM=autre_pays
 ```
 
 ```{r}
+donn2010=df_BM%>%filter(year==2010)%>%select('Country.Code','gdb_hab')%>%rename(gdp_hab2010=gdb_hab)
+df_BM=df_BM%>%left_join(donn2010,on="Country.Code")
+
+df_BM$gdp_hab_ind=(df_BM$gdb_hab/df_BM$gdp_hab2010)*100
+```
+
+```{r}
 variable=c("exports_rate","gdb_hab","FBCF","labor_force")
-df_BM$id_country=as.integer(df_BM$id_country)
-df_BM=as.data.frame(df_BM)
 
 dataprep.out=Synth::dataprep(foo=df_BM,
                 predictors = (variable),#Les variables utilisées en contrôle
@@ -67,19 +72,39 @@ synth.tables <- Synth::synth.tab(dataprep.res = dataprep.out,
 synth.tables$tab.pred
 synth.tables$tab.v
 ```
+```{r}
+gen_liste=function(liste_value, date=c(list(2000:2007), list(2008:2011), 2012))
+{
+a=0
+
+for(i in liste_value ){
+  for (j in date){
+    a=a+1
+    if(a==1){liste=list(list(i,j, "mean"))}
+    
+    else{liste=c(liste, list(list(i, j, "mean")))  }
+  }
+}
+liste=as.list(liste)
+
+return(liste)
+}
+
+```
+
+
 
 ```{r}
 simpleSynthBM=function(liste_value, df.melt=df_BM, pays='FRA', dateplot=1997:2016, dateopti=2000:2012){
 special=list()
+
 year=seq(dateopti[1],dateopti[length(dateopti)],2)
 ind_pays=as.numeric(df.melt[df.melt$Country.Code=='FRA',]$id_country[1])
 #Version avec les différentes dates version Synth
 dataprep.out=Synth::dataprep(foo=df.melt,
                 predictors.op = "mean", #La manière dont on les prend en compte
                 time.predictors.prior = 2012, #période pré-traitement
-                special.predictors = list(list("gdb_hab",2010:2011,"mean"),
-                                          list("gdb_hab",2004:2006,"mean"),
-                                          list("gdb_hab",2007,"mean")),
+                special.predictors = gen_liste(liste_value),
                 dependent=liste_value[1], #variable d'intérêt
                 unit.variable = "id_country", #colonne avec les index des pays
                 unit.names.variable="Country.Code", #nom des pays
@@ -97,9 +122,113 @@ synth.tables <- Synth::synth.tab(dataprep.res = dataprep.out,synth.res = synth.o
 poids1=synth.tables$tab.w%>%rename(poids=w.weights)
 print(poids1)}
 ```
+
+
+
 ```{r}
-simpleSynthBM(c('gdb_hab', 'exports.hab', 'unemployment rate'))
+simpleSynthBM(c('gdp_hab_ind', 'exports_hab', 'unemployment rate'))
+```
+
+
+```{r}
+simpleSynthBM(c('unemployment rate', 'gdb_hab', 'exports_hab' ))
 ```
 
 
 
+
+```{r}
+numinit=1
+nbre_pays=max(df_BM$id_country)
+d=c(1:nbre_pays)
+liste_value=c('unemployment rate', 'gdb_hab', 'exports_hab' )
+numFR=as.numeric(df_BM[df_BM$Country.Code=='FRA',]$id_country[1])
+
+for (i in d)
+{
+  #On calcul le contrôle synthétique avec l'unité i traitée
+  print(i)
+  if(i==1){ind_ctrl=c(2:nbre_pays)}
+  else{
+    if(i==nbre_pays){ind_ctrl=c(1:(i-1))}
+    else{ind_ctrl=c(1:(i-1),(i+1):nbre_pays)}
+    }
+  dataprep_i.out=Synth::dataprep(foo=df_BM,
+                predictors = liste_value,
+                special.predictors = gen_liste(liste_value),
+                time.predictors.prior = 2000:2011, 
+                dependent=liste_value[1], 
+                unit.variable = "id_country", #colonne avec les index des pays
+                unit.names.variable="Country.Code", #nom des pays
+                treatment.identifier = i, 
+                controls.identifier =   ind_ctrl, 
+                time.variable = 'year', 
+                time.optimize.ssr = 2000:2010, #
+                time.plot=1999:2016) 
+
+quiet(synth.out_i <- Synth::synth(data.prep.obj = dataprep_i.out, method = "BFGS")) #On calcul les résultats sans les afficher
+
+#Synth::gaps.plot(synth.res = synth.out_i, dataprep.res = dataprep_i.out,Ylab = "PIB", Xlab = "year")
+
+  if (i==numinit) { #On initialise une base avec en ligne le noms de l'unité puis l'effet du traitement pour chaque année (le numéro de l'année n'est pas dans la base)
+    noms=c(rep(as.character(i),nrow(dataprep_i.out$Y0)))
+    valeur=dataprep_i.out$Y1-dataprep_i.out$Y0%*%synth.out_i$solution.w 
+    df=data.frame(noms,valeur)
+    couleur=c("red") #ca c'est pour gérer les couleurs 
+  }
+  
+  if (i>numinit) {  #On complète la base
+    noms=c(noms,rep(as.character(i),nrow(dataprep_i.out$Y0)))
+    valeur=c(valeur,dataprep_i.out$Y1-dataprep_i.out$Y0%*%synth.out_i$solution.w)
+    df=data.frame(noms,valeur)
+    if (i==numFR){couleur=c(couleur,"blue")}
+    else{couleur=c(couleur,"red")}}
+
+}
+    
+df
+df2=data.frame(x=(rep((1999:2016),length(unique(noms)))),df)
+df_effe=filter(df2,x>2008)
+```
+
+
+
+
+```{r}
+df2$noms=as.numeric(df2$nom)
+df_RMPSE=df2%>%rename(id_country=noms)%>%left_join(df_BM[c("Country.Code","id_country")][d,])
+df_RMPSE$valeur_sq=df_RMPSE$valeur*df_RMPSE$valeur
+RMPSE_res=group_by(df_RMPSE,id_country)%>% summarise(RMPSE_tot = mean(valeur_sq),Country.Code=unique(Country.Code))
+RMPSE_res$RMPSE_trait=(group_by(filter(df_RMPSE,x>2012),id_country)%>% summarise(mean = mean(valeur_sq),Country.Code=unique(Country.Code)))$mean
+RMPSE_res$RMPSE_prev=(group_by(filter(df_RMPSE,x<2013),id_country)%>% summarise(mean = mean(valeur_sq),Country.Code=unique(Country.Code)))$mean
+```
+
+
+```{r}
+pays=unique(df_BM[c('id_country','Country.Code')])
+
+RMPSE_2=RMPSE_res[-3]
+RMPSE_res=RMPSE_2%>%left_join(pays)
+RMPSE_res
+```
+
+```{r}
+pays=unique(df_BM[c('id_country','Country.Code')])
+
+RMPSE_2=RMPSE_res[-3]
+RMPSE_res=RMPSE_2%>%left_join(pays)
+RMPSE_res%>%mutate(RMPSE_tot=sqrt(RMPSE_res$RMPSE_tot),
+                   RMPSE_trait=sqrt(RMPSE_res$RMPSE_trait),
+                   RMPSE_res=sqrt(RMPSE_res$RMPSE_prev)) %>%select(Country.Code,RMPSE_tot,RMPSE_trait,RMPSE_prev)
+RMPSE_res$RMPSE_ajuste=RMPSE_res$RMPSE_trait/RMPSE_res$RMPSE_prev
+RMPSE_res%>%arrange(-RMPSE_res$RMPSE_ajuste)
+
+RMPSE_res%>%arrange(-RMPSE_res$RMPSE_ajuste)
+```
+
+
+```{r}
+df2$noms=as.character(df2$noms)
+qplot(x=x, y=valeur,color=noms, data=df2, geom="line",ylim=c(-20,25))+ xlab("Date") +scale_color_manual(breaks = unique(df2$noms),                        values=couleur)
+df_BM
+```
