--- a/Synthetique v0.Rmd
+++ b/Synthetique v0.Rmd
@@ -364,38 +364,34 @@ tripleSynth(liste_value=c("Emp_ind","VA_ind", "Productivite", "export", "W", "ta
 tripleSynth(liste_value=c("evol_Emp","evol_VA"), df.evol, pays='FRA', date0=2000, date1=2005)
 ```
 
+
 ```{r}
 graph_strat=function(solpoids=synth.out$solution.w, df.melt=df.melted_i, valeur='VA'){
 a=1
-newrow=data.frame(valeur=df.melted_i[df.melted_i$index==a,]$VA, temps=1997:2016, index=1)
+poids_pays=data.frame(poids=solpoids[1],country=unique(df.melt[df.melt$index==a,]$country), index=1)
+newrow=data.frame(valeur=df.melt[df.melt$index==a,]$VA, temps=1997:2016, index=1)
 dfstrat=newrow
-for(poids in synth.out$solution.w){
-  if(a>1){newrow=newrow+data.frame(valeur=df.melted_i[df.melted_i$index==a,]$VA, temps=0, index=1)
+
+for(poids in solpoids){
+  if(a>1){
+   newrow=newrow+data.frame(valeur=df.melt[df.melt$index==a,]$VA, temps=0, index=1)
    dfstrat=rbind(dfstrat, newrow) 
+   poids_pays=rbind(poids_pays, data.frame(poids=poids, country=unique(df.melt[df.melt$index==a,]$country), index=a))
   }
   a=a+1
 }
+dfstrat$colour=rainbow(a-1)
+dfstrat=left_join(dfstrat, poids_pays)
+poids_pays=order(poids_pays, decreasing=TRUE)
+print(poids_pays)
 ggplot(data=dfstrat,aes(x=temps, valeur)) +
-  geom_line(aes(group=index), colour=rainbow(440))}
-```
-
-
-```{r}
-dataprep.out=Synth::dataprep(foo=df.melted_i,
-                predictors = 'VA', #Les variables utilisées en contrôle
-                predictors.op = "mean", #La manière dont on les prend en compte
-                time.predictors.prior = 2012, #période pré-traitement
-                dependent='VA', #variable d'intérêt
-                unit.variable = "index", #colonne avec les index des pays
-                unit.names.variable="country", #nom des pays
-                treatment.identifier = 11, # n° de l'unité traitée
-                controls.identifier = c(1:23)[-11], #n° des unités de contrôles
-                time.variable = 'temps', #colonne où se trouve la date
-                time.optimize.ssr = 2000:2014, #période de maximisation
-                time.plot=1997:2016) #période tracée sur le graphique
-synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = "BFGS")
+  geom_line(aes(group=index, col=country)) 
+}
 graph_strat()
 ```
+
+
+
 
 
 ```{r}
