--- a/Synthetique v0.Rmd
+++ b/Synthetique v0.Rmd
@@ -368,29 +368,102 @@ tripleSynth(liste_value=c("evol_Emp","evol_VA"), df.evol, pays='FRA', date0=2000
 
 
 ```{r}
-graph_strat=function(solpoids=synth.out$solution.w, df.melt=df.melted_i, valeur='VA'){
+graph_strat=function(df.melt=df.melted_i, liste_value='VA', pays='FRA', date0=1997, date1=2005, date2=2012, date3=2016){
+  valeur=liste_value[1]
+  #on récupère les poids
+  ind_pays=as.numeric(df.melt[df.melt$country==pays,]$index[1])
+  dataprep.out=Synth::dataprep(foo=df.melt,
+                predictors = liste_value, #Les variables utilisées en contrôle
+                predictors.op = "mean", #La manière dont on les prend en compte
+                time.predictors.prior = 2012, #période pré-traitement
+                dependent='VA', #variable d'intérêt
+                unit.variable = "index", #colonne avec les index des pays
+                unit.names.variable="country", #nom des pays
+                treatment.identifier = ind_pays, # n° de l'unité traitée
+                controls.identifier = c(1:max(df.melted_i$index))[-ind_pays], #n° des unités de contrôles
+                time.variable = 'temps', #colonne où se trouve la date
+                time.optimize.ssr = date1:date2, #période de maximisation
+                time.plot=date0:date3) #période tracée sur le graphique
+synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = "BFGS")
+solpoids=synth.out$solution.w
+poidstri=order(solpoids, decreasing=TRUE)[1:8]
+#puis on construit les séries augmentées
+##problème : on n'a pas enlevé le pays considéré !
 a=1
 poids_pays=data.frame(poids=solpoids[1],country=unique(df.melt[df.melt$index==a,]$country), index=1)
-newrow=data.frame(valeur=df.melt[df.melt$index==a,]$VA, temps=1997:2016, index=1)
+newrow=data.frame(valeur=df.melt[df.melt$index==a,]$VA*solpoids[1], temps=1997:2016, index=1)
 dfstrat=newrow
 
 for(poids in solpoids){
-  if(a>1){
-   newrow=newrow+data.frame(valeur=df.melt[df.melt$index==a,]$VA, temps=0, index=1)
+  if(a>1|a!=ind_pays){
+   newrow=newrow+data.frame(valeur=df.melt[df.melt$index==a,]$VA*poids, temps=0, index=1)
    dfstrat=rbind(dfstrat, newrow) 
    poids_pays=rbind(poids_pays, data.frame(poids=poids, country=unique(df.melt[df.melt$index==a,]$country), index=a))
+   
   }
   a=a+1
 }
-dfstrat$colour=rainbow(a-1)
+
 dfstrat=left_join(dfstrat, poids_pays)
 poids_pays=order(poids_pays, decreasing=TRUE)
 print(poids_pays)
+
 ggplot(data=dfstrat,aes(x=temps, valeur)) +
   geom_line(aes(group=index, col=country)) 
 }
-graph_strat()
+graph_strat(liste_value='VA')
 ```
+```{r}
+df.melt=df.melted_i
+liste_value='Emp_ind'
+pays='FRA'
+date0=1997
+date1=2005
+date2=2012
+date3=2016
+  valeur=liste_value[1]
+  #on récupère les poids
+  ind_pays=as.numeric(df.melt[df.melt$country==pays,]$index[1])
+  dataprep.out=Synth::dataprep(foo=df.melt,
+                predictors = liste_value, #Les variables utilisées en contrôle
+                predictors.op = "mean", #La manière dont on les prend en compte
+                time.predictors.prior = 2012, #période pré-traitement
+                dependent=liste_value[1], #variable d'intérêt
+                unit.variable = "index", #colonne avec les index des pays
+                unit.names.variable="country", #nom des pays
+                treatment.identifier = ind_pays, # n° de l'unité traitée
+                controls.identifier = c(1:max(df.melted_i$index))[-ind_pays], #n° des unités de contrôles
+                time.variable = 'temps', #colonne où se trouve la date
+                time.optimize.ssr = date1:date2, #période de maximisation
+                time.plot=date0:date3) #période tracée sur le graphique
+synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = "BFGS")
+solpoids=synth.out$solution.w
+poidstri=order(solpoids, decreasing=TRUE)[1:8]
+#puis on construit les séries augmentées
+##problème : on n'a pas enlevé le pays considéré !
+a=1
+poids_pays=data.frame(poids=solpoids[1],country=unique(df.melt[df.melt$index==a,]$country), index=1)
+newrow=data.frame(valeur=df.melt[df.melt$index==a,]$VA*solpoids[1], temps=1997:2016, index=1)
+dfstrat=newrow
+
+for(poids in solpoids){
+  if(a>1 & a!=ind_pays){
+   newrow=newrow+data.frame(valeur=df.melt[df.melt$index==a,]$VA*poids, temps=0, index=1)
+   dfstrat=rbind(dfstrat, newrow) 
+   poids_pays=rbind(poids_pays, data.frame(poids=poids, country=unique(df.melt[df.melt$index==a,]$country), index=a))
+   
+  }
+  a=a+1
+}
+
+dfstrat=left_join(dfstrat, poids_pays)
+poids_pays=order(poids_pays, decreasing=TRUE)
+print(poids_pays)
+
+ggplot(data=dfstrat,aes(x=temps, valeur)) +
+  geom_line(aes(group=index, col=country)) 
+```
+
 
 
 
