--- a/Synthetique v0.Rmd
+++ b/Synthetique v0.Rmd
@@ -376,7 +376,7 @@ graph_strat=function(df.melt=df.melted_i, liste_value='VA', pays='FRA', date0=19
                 predictors = liste_value, #Les variables utilisées en contrôle
                 predictors.op = "mean", #La manière dont on les prend en compte
                 time.predictors.prior = 2012, #période pré-traitement
-                dependent='VA', #variable d'intérêt
+                dependent=liste_value[1], #variable d'intérêt
                 unit.variable = "index", #colonne avec les index des pays
                 unit.names.variable="country", #nom des pays
                 treatment.identifier = ind_pays, # n° de l'unité traitée
@@ -388,31 +388,36 @@ synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = "BFGS")
 solpoids=synth.out$solution.w
 poidstri=order(solpoids, decreasing=TRUE)[1:8]
 #puis on construit les séries augmentées
-##problème : on n'a pas enlevé le pays considéré !
+#initialisation
 a=1
 poids_pays=data.frame(poids=solpoids[1],country=unique(df.melt[df.melt$index==a,]$country), index=1)
-newrow=data.frame(valeur=df.melt[df.melt$index==a,]$VA*solpoids[1], temps=1997:2016, index=1)
+newrow=data.frame(valeur=df.melt[df.melt$index==a,][,valeur]*solpoids[1], temps=1997:2016, index=1)
 dfstrat=newrow
-
+#boucle sur les pays pour agréger
 for(poids in solpoids){
-  if(a>1|a!=ind_pays){
-   newrow=newrow+data.frame(valeur=df.melt[df.melt$index==a,]$VA*poids, temps=0, index=1)
+  if(a>1 & a!=ind_pays){
+   newrow=newrow+data.frame(valeur=df.melt[df.melt$index==a,][,valeur]*poids, temps=0, index=1)
    dfstrat=rbind(dfstrat, newrow) 
    poids_pays=rbind(poids_pays, data.frame(poids=poids, country=unique(df.melt[df.melt$index==a,]$country), index=a))
+   }
+   if(a==ind_pays){newrow=newrow+data.frame(valeur=rep(0,date3-date0+1), temps=0, index=1)
+   print(newrow)
+   }
    
-  }
+  
   a=a+1
 }
 
 dfstrat=left_join(dfstrat, poids_pays)
 poids_pays=order(poids_pays, decreasing=TRUE)
-print(poids_pays)
+
 
 ggplot(data=dfstrat,aes(x=temps, valeur)) +
-  geom_line(aes(group=index, col=country)) 
+  geom_line(aes(group=index, col=country))  
 }
 graph_strat(liste_value='VA')
 ```
+
 ```{r}
 df.melt=df.melted_i
 liste_value='Emp_ind'
@@ -451,8 +456,12 @@ for(poids in solpoids){
    newrow=newrow+data.frame(valeur=df.melt[df.melt$index==a,]$VA*poids, temps=0, index=1)
    dfstrat=rbind(dfstrat, newrow) 
    poids_pays=rbind(poids_pays, data.frame(poids=poids, country=unique(df.melt[df.melt$index==a,]$country), index=a))
+   }
+   if(a==ind_pays){newrow=newrow+data.frame(valeur=rep(0,date3-date0+1), temps=0, index=1)
+   print(newrow)
+   }
    
-  }
+  
   a=a+1
 }
 
