--- a/code BM.Rmd
+++ b/code BM.Rmd
@@ -99,6 +99,68 @@ return(liste)
 ```
 
 
+```{r}
+graph_stratBM=function(df.melt=df_BM, liste_value='gdb_hab', pays='FRA', date0=1997, date1=2005, date2=2012, date3=2016, synthdon=TRUE, synth.out=0){
+  valeur=liste_value[1]
+  #on récupère les poids
+  ind_pays=as.numeric(df.melt[df.melt$Country.Code==pays,]$id_country[1])
+  if(synthdon){dataprep.out=Synth::dataprep(foo=df.melt,
+                predictors = liste_value, #Les variables utilisées en contrôle
+                predictors.op = "mean", #La manière dont on les prend en compte
+                time.predictors.prior = 2012, #période pré-traitement
+                dependent=liste_value[1], #variable d'intérêt
+                unit.variable = "id_country", #colonne avec les index des pays
+                unit.names.variable="Country.Code", #nom des pays
+                treatment.identifier = ind_pays, # n° de l'unité traitée
+                controls.identifier = c(1:max(df.melt$id_country))[-ind_pays], #n° des unités de contrôles
+                time.variable = 'year', #colonne où se trouve la date
+                time.optimize.ssr = date1:date2, #période de maximisation
+                time.plot=date0:date3) #période tracée sur le graphique
+synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = "BFGS")}else{synth.out=synth.out}
+solpoids=synth.out$solution.w
+#puis on construit les séries augmentées
+a=1
+
+newrow=data.frame(valeur=df.melt[df.melt$id_country==a & df.melt$year==2016,][,valeur]*solpoids[1], index=1,country=unique(df.melt[df.melt$id_country==a,]$Country.Code))
+dfstrat=newrow
+
+for(poids in solpoids){
+  if(a>1 & a!=ind_pays){
+   newrow=data.frame(valeur=df.melt[df.melt$id_country==a & df.melt$year==2016,][,valeur]*poids, index=a,country=unique(df.melt[df.melt$id_country==a,]$Country.Code))
+   dfstrat=rbind(dfstrat, newrow) 
+  }
+  a=a+1
+}
+
+numgrand=order(dfstrat$valeur, decreasing=TRUE)
+dfstrat=dfstrat[order(dfstrat$valeur, decreasing=TRUE),]
+
+for (num in 1:length(numgrand)){
+  if(numgrand[num]>=ind_pays){numgrand[num]=numgrand[num]+1}}#on compense l'absence de la France
+
+newrow=df.melt[df.melt$id_country==numgrand[1] & df.melt$year>date0-1 & df.melt$year<date3+1,][,valeur]*solpoids[numgrand[1]]
+newdata=data.frame(valeur=newrow, country=unique(dfstrat[dfstrat$index==numgrand[1],]$country), temps=date0:date3)
+dfstratfin=newdata
+
+for(pays in 2:(max(df.melt$id_country)-2)){
+   newrow=newrow+df.melt[df.melt$id_country==numgrand[pays]& df.melt$year>date0-1 & df.melt$year<date3+1,][,valeur]*solpoids[numgrand[pays]]
+   if (pays<6){
+     newdata=data.frame(valeur=newrow, country=unique(dfstrat[dfstrat$index==numgrand[pays],]$country), temps=date0:date3)
+   dfstratfin=rbind(dfstratfin, newdata) 
+   }
+   if(pays==max(df.melt$id_country)-2){
+     newdata=data.frame(valeur=newrow, country='autres', temps=date0:date3)
+     dfstratfin=rbind(dfstratfin, newdata)
+     }
+}
+
+ggplot(data=dfstratfin,aes(x=temps, valeur)) +
+  geom_line(aes(group=country, col=country))  
+}
+```
+```{r}
+graph_stratBM()
+```
 
 ```{r}
 simpleSynthBM=function(liste_value, df.melt=df_BM, pays='FRA', dateplot=1997:2016, dateopti=2000:2012){
