--- a/Synthetique v0.Rmd
+++ b/Synthetique v0.Rmd
@@ -254,6 +254,80 @@ return(liste)
 ```
 ###la fonction avec stratification du synthétique
 
+```{r}
+df.melt=df.melted_i
+liste_value='VA'
+pays='FRA'
+date0=1997
+date1=2005
+date2=2012
+date3=2016
+synthdon=FALSE
+synth.out=synth.out
+  valeur=liste_value[1]
+  #on récupère les poids
+  ind_pays=as.numeric(df.melt[df.melt$country==pays,]$index[1])
+  if(synthdon){dataprep.out=Synth::dataprep(foo=df.melt,
+                predictors = liste_value, #Les variables utilisées en contrôle
+                predictors.op = "mean", #La manière dont on les prend en compte
+                time.predictors.prior = 2012, #période pré-traitement
+                dependent=liste_value[1], #variable d'intérêt
+                unit.variable = "index", #colonne avec les index des pays
+                unit.names.variable="country", #nom des pays
+                treatment.identifier = ind_pays, # n° de l'unité traitée
+                controls.identifier = c(1:max(df.melt$index))[-ind_pays], #n° des unités de contrôles
+                time.variable = 'temps', #colonne où se trouve la date
+                time.optimize.ssr = date1:date2, #période de maximisation
+                time.plot=date0:date3) #période tracée sur le graphique
+synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = "BFGS")}else{synth.out=synth.out}
+```
+
+```{r}
+
+solpoids=synth.out$solution.w
+#puis on construit les séries augmentées
+a=1
+
+
+for(poids in solpoids){
+if(a!=ind_pays){
+
+  newrow=data.frame(valeur=df.melt[df.melt$index==a & df.melt$temps==2016,][,valeur]*poids, index=a,country=unique(df.melt[df.melt$index==a,]$country))
+  if(a==1){dfstrat=newrow} 
+  else{dfstrat=rbind(dfstrat, newrow)}}
+a=a+1
+}
+
+numgrand=order(dfstrat$valeur, decreasing=TRUE)
+numbis=dfstrat$index[numgrand]
+
+#dfstrat=dfstrat[order(dfstrat$valeur, decreasing=TRUE),]
+
+#for (num in 1:length(numgrand)){
+  #if(numgrand[num]>=ind_pays){numgrand[num]=numgrand[num]+1}
+  #}#on compense l'absence de la France
+
+newrow=df.melt[df.melt$index==dfstrat$index[numgrand[1]] & df.melt$temps>date0-1 & df.melt$temps<date3+1,][,valeur]*solpoids[dfstrat$index[numgrand[1]]]
+newdata=data.frame(valeur=newrow, country=unique(dfstrat[dfstrat$index==dfstrat$index[numgrand[1]],]$country), temps=date0:date3)
+dfstratfin=newdata
+
+for(pays in 2:length(numgrand)){#(max(df.melt$index)-2)
+   newrow=newrow+df.melt[df.melt$index==dfstrat$index[numgrand[pays]]& df.melt$temps>date0-1 & df.melt$temps<date3+1,][,valeur]*solpoids[dfstrat$index[numgrand[pays]]]
+   if (pays<6){
+     newdata=data.frame(valeur=newrow, country=unique(dfstrat[dfstrat$index==dfstrat$index[numgrand[pays]],]$country), temps=date0:date3)
+   
+     dfstratfin=rbind(dfstratfin, newdata)
+   }
+   if(pays==max(df.melt$index)-2){
+     newdata=data.frame(valeur=newrow, country='autres', temps=date0:date3)
+     dfstratfin=rbind(dfstratfin, newdata)
+     }
+}
+
+ggplot(data=dfstratfin,aes(x=temps, valeur)) +
+  geom_line(aes(group=country, col=country))  
+
+```
 
 
 ```{r}
@@ -278,32 +352,33 @@ solpoids=synth.out$solution.w
 #puis on construit les séries augmentées
 a=1
 
-newrow=data.frame(valeur=df.melt[df.melt$index==a & df.melt$temps==2016,][,valeur]*solpoids[1], index=1,country=unique(df.melt[df.melt$index==a,]$country))
-dfstrat=newrow
 
 for(poids in solpoids){
-  if(a>1 & a!=ind_pays){
-   newrow=data.frame(valeur=df.melt[df.melt$index==a & df.melt$temps==2016,][,valeur]*poids, index=a,country=unique(df.melt[df.melt$index==a,]$country))
-   dfstrat=rbind(dfstrat, newrow) 
-  }
-  a=a+1
+if(a!=ind_pays){
+
+  newrow=data.frame(valeur=df.melt[df.melt$index==a & df.melt$temps==2016,][,valeur]*poids, index=a,country=unique(df.melt[df.melt$index==a,]$country))
+  if(a==1){dfstrat=newrow} 
+  else{dfstrat=rbind(dfstrat, newrow)}}
+a=a+1
 }
 
 numgrand=order(dfstrat$valeur, decreasing=TRUE)
-dfstrat=dfstrat[order(dfstrat$valeur, decreasing=TRUE),]
+#dfstrat=dfstrat[order(dfstrat$valeur, decreasing=TRUE),]
 
 for (num in 1:length(numgrand)){
-  if(numgrand[num]>=ind_pays){numgrand[num]=numgrand[num]+1}}#on compense l'absence de la France
+  if(numgrand[num]>=ind_pays){numgrand[num]=numgrand[num]+1}
+  }#on compense l'absence de la France
 
 newrow=df.melt[df.melt$index==numgrand[1] & df.melt$temps>date0-1 & df.melt$temps<date3+1,][,valeur]*solpoids[numgrand[1]]
 newdata=data.frame(valeur=newrow, country=unique(dfstrat[dfstrat$index==numgrand[1],]$country), temps=date0:date3)
 dfstratfin=newdata
 
-for(pays in 2:(max(df.melt$index)-2)){
+for(pays in 2:length(numgrand)){#(max(df.melt$index)-2)
    newrow=newrow+df.melt[df.melt$index==numgrand[pays]& df.melt$temps>date0-1 & df.melt$temps<date3+1,][,valeur]*solpoids[numgrand[pays]]
    if (pays<6){
      newdata=data.frame(valeur=newrow, country=unique(dfstrat[dfstrat$index==numgrand[pays],]$country), temps=date0:date3)
-   dfstratfin=rbind(dfstratfin, newdata) 
+   
+     dfstratfin=rbind(dfstratfin, newdata)
    }
    if(pays==max(df.melt$index)-2){
      newdata=data.frame(valeur=newrow, country='autres', temps=date0:date3)
